force-app/main/default/objects/Partner_Health__c/Partner_Health__c.object-meta.xml
<CustomObject>
    <description>Used to hold periodic snapshots of Loan Partner metrics</description>
    <label>Partner Health</label>
    <nameField>
        <label>Partner Health Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Health</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>