force-app/main/default/objects/Partner_Health__c/fields/Approval_Rate__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rate__c</fullName>
    <inlineHelpText>Qualified Leads / Finished Leads Ready for Credit Check</inlineHelpText>
    <label>Approval Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>