force-app/main/default/objects/Partner_Health__c/fields/Average_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_Income__c</fullName>
    <inlineHelpText>Sum of declared Annual Income / Finished Leads Ready for Credit Check</inlineHelpText>
    <label>Average Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>