force-app/main/default/objects/Partner_Health__c/fields/Average_App_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Average_App_to_Close__c</fullName>
    <inlineHelpText>Sum of Time to Close from Complete Opportunities / Total Completed Opportunities</inlineHelpText>
    <label>Average App to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>