force-app/main/default/objects/Partner_Health__c/fields/Average_Construction_Period__c.field-meta.xml
<CustomField>
    <fullName>Average_Construction_Period__c</fullName>
    <inlineHelpText>Average of Completed Opportunities Construction Periods (the difference between first and last disbursal dates, if all disbursals are made)</inlineHelpText>
    <label>Average Construction Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>