force-app/main/default/objects/Partner_Health__c/fields/Average_DTI__c.field-meta.xml
<CustomField>
    <fullName>Average_DTI__c</fullName>
    <inlineHelpText>Average Combined DTI After for Finished Leads ready for Credit Check</inlineHelpText>
    <label>Average DTI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>