force-app/main/default/objects/Partner_Health__c/fields/Average_Max_FICO__c.field-meta.xml
<CustomField>
    <fullName>Average_Max_FICO__c</fullName>
    <inlineHelpText>Average FICO for Completed Opportunities (using the max FICO between primary and co-applicant)</inlineHelpText>
    <label>Average FICO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>