force-app/main/default/objects/Partner_Health__c/fields/Completed_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Completed_Opportunities__c</fullName>
    <inlineHelpText>Number of non-Testcase Opportunities with Stage of Complete and Product Line of Residential Loan</inlineHelpText>
    <label>Completed Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>