force-app/main/default/objects/Partner_Health__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <inlineHelpText>Number of Completed Opportunities / Finished Leads Ready for Credit Check</inlineHelpText>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>