force-app/main/default/objects/Partner_Health__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>The month corresponding to this Partner Health record.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>