force-app/main/default/objects/Partner_Health__c/fields/Decline_Rate__c.field-meta.xml
<CustomField>
    <fullName>Decline_Rate__c</fullName>
    <inlineHelpText>Unqualified Leads / Finished Leads Ready for Credit Check</inlineHelpText>
    <label>Decline Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>