force-app/main/default/objects/Partner_Health__c/fields/Finished_Leads_Ready_for_Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Finished_Leads_Ready_for_Credit_Check__c</fullName>
    <inlineHelpText>This Partner&apos;s Leads that are Qualified, Pre-Qualified, or Ready for Credit Check. It excludes leads that are Unqualified and Unfinished.</inlineHelpText>
    <label>Finished Leads Ready for Credit Check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>