force-app/main/default/objects/Partner_Health__c/fields/Num_Delinquent_Loans__c.field-meta.xml
<CustomField>
    <fullName>Num_Delinquent_Loans__c</fullName>
    <inlineHelpText>Loans for this partner with Days Past Due greater than 30</inlineHelpText>
    <label># of Delinquent Loans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>