force-app/main/default/objects/Partner_Health__c/fields/Num_of_Installations_over_100_Days__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Installations_over_100_Days__c</fullName>
    <inlineHelpText>Number of Opportunities for this partner with Installation Queue Duration &gt; 100</inlineHelpText>
    <label># of Installations over 100 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>