force-app/main/default/objects/Partner_Health__c/fields/Num_Pre_Qualified_Leads__c.field-meta.xml
<CustomField>
    <fullName>Num_Pre_Qualified_Leads__c</fullName>
    <inlineHelpText>Number of Leads for this partner with Status = Pre-Qualified</inlineHelpText>
    <label># of Pre-Qualified Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>