force-app/main/default/objects/Partner_Health__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Partner Health</relationshipLabel>
    <relationshipName>PartnerHealth</relationshipName>
    <type>Lookup</type>
</CustomField>