force-app/main/default/objects/Partner_Health__c/fields/Perc_Installation_over_100_Days__c.field-meta.xml
<CustomField>
    <fullName>Perc_Installation_over_100_Days__c</fullName>
    <label>% Installation over 100 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>