force-app/main/default/objects/Partner_Health__c/fields/Perc_of_Delinquent_Loans__c.field-meta.xml
<CustomField>
    <fullName>Perc_of_Delinquent_Loans__c</fullName>
    <label>% of Delinquent Loans</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>