force-app/main/default/objects/Partner_Health__c/fields/Pre_Qualified_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pre_Qualified_Rate__c</fullName>
    <inlineHelpText>Pre-Qualified Leads / Finished Leads Ready for Credit Check</inlineHelpText>
    <label>Pre-Qualified Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>