force-app/main/default/objects/Partner_Health__c/fields/Qualified_Leads__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Leads__c</fullName>
    <inlineHelpText>Number of Leads with Status of Qualified</inlineHelpText>
    <label>Qualified Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>