force-app/main/default/objects/Partner_Health__c/fields/Total_Leads__c.field-meta.xml
<CustomField>
    <fullName>Total_Leads__c</fullName>
    <inlineHelpText>Total number of non-Testcase leads for this Partner with Product Line of Residential Loan</inlineHelpText>
    <label>Total Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>