force-app/main/default/objects/Partner_Health__c/fields/Total_Loans_with_Construction_Period__c.field-meta.xml
<CustomField>
    <fullName>Total_Loans_with_Construction_Period__c</fullName>
    <inlineHelpText>Number of Loans that have been fully disbursed (for which we can calculate a construction period)</inlineHelpText>
    <label>Total Loans with Construction Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>