force-app/main/default/objects/Partner_Health__c/fields/Unfinished_Leads_Ready_for_Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Unfinished_Leads_Ready_for_Credit_Check__c</fullName>
    <inlineHelpText>Leads with Status of either Unfinished, or Ready for Credit Check</inlineHelpText>
    <label>Unfinished Leads Ready for Credit Check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>