force-app/main/default/objects/Partner_Health__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>Used to identify this partner&apos;s monthly Partner Health record</inlineHelpText>
    <label>Unique ID</label>
    <length>125</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>