force-app/main/default/objects/Partner_Health__c/fields/Unqualified_Leads__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Leads__c</fullName>
    <inlineHelpText>Leads for this partner with Status of Unqualified</inlineHelpText>
    <label>Unqualified Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>